style.css
*{
    margin:0px;
    padding:0px;
    box-sizing: border-box;
    background-color: #fffff2;
}


.container img{
    width:100px;
    height:100px;
    border-radius:5px;
}

.container h2{
    font-family: 'Carter One';
    font-size:40px;
    color: #105496;
    margin-left:auto;
    margin-right:auto;
    text-align: center;
}


nav{
    width:100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 20px;
}

.pill{
    display:flex;
    justify-content: center;
    align-items: center;
    background-color: #fffff2;
    color: #105496;
    border-color:#105496;
    font-size:15px;
    font-family:'Readex Pro', sans-serif;
    padding:1em 2em;
    margin:0.25em;
    border-radius: 0.5em;
    border-width:0.2em;
}

.features1{
    margin-left:auto;
    margin-right:auto;
    text-align: center;
    justify-content:center;
}

.features1 h2{
    font-family:'Montserrat:@200';
    color: rgb(52, 199, 225);
    font-size:30px;
    top:10px;
    text-align:Center;
    
}

.features1 img{
    width:300px;
    height:600px;
}

.features1 h3{
    font-family:'Readex Pro', sans-serif;
    color: #105496;
    font-size:20px;
    top:10px;
    text-align:center;
    
}

.features1 h4{
    font-family:'Readex Pro', sans-serif;
    color: rgb(52, 199, 225);
    font-size:20px;
    top:10px;

    
}

.features1 h5{
    font-family:'Times New Roman', sans-serif;
    color: #105496;
    font-size:18px;
    top:10px; 
}

.pill2{
    
    justify-content: center;
    align-items: center;
    background-color:#105496;
    font-display:white;
    font-size:15px;
    font-family:'Readex Pro', sans-serif;
    padding:1em 2em;
    margin:0.25em;
    border-radius: 0.5em;
    border-width:0.2em;
}

.features2 h2,h3,h4,h5{
    font-family:sans-serif;
    color: #105496;
    font-size:20px;
    justify-content:space-around;

}
.features2 h2{
    margin-left:auto;
    margin-right:auto;
    text-align: Left;
}

.features2 h4{
    margin-left:auto;
    margin-right:auto;
    text-align: Left;
}
.group1{
    margin-left:auto;
    margin-right:auto;
    text-align: Right;

}

.group2{
    margin-left:auto;
    margin-right:auto;
    text-align: Left;

}
.features2 h3{
    margin-left:auto;
    margin-right:auto;
    text-align: Right;
}

.features2 h5{
    margin-left:auto;
    margin-right:auto;
    text-align: Right;
}
.pill3{   
    justify-content: center;
    align-items: center;
    background-color:#105496;
    font-display:white;
    font-size:15px;
    font-family:'Readex Pro', sans-serif;
    padding:1em 2em;
    margin:0.25em;
    border-radius: 0.5em;
    border-width:0.2em;
}

